--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Никита Гуков</title>
+        <title>Nikita Gukov</title>
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://gukov.me/">
         <meta property="og:title" content="Никита Гуков">
